[package]
name = "viper"
version = "0.1.0"
authors = ["Musab Guma'a <musabgumaa@gmail.com>"]
edition = "2018"

[lib]
name="viper_utils"
path="src/lib.rs"

[[bin]]
name="viper"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1.3.4"
lazy_static = "1.4.0"
