[package]
name = "viper"
version = "0.2.0"
authors = ["Musab Guma'a <musabgumaa@gmail.com>"]
edition = "2018"
description = "A rust package to simplify python project creation"
repository = "https://github.com/mgsium/Viper"
keywords = ["python", "setup"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[badges]
appveyor = { repository = "https://github.com/mgsium/Viper", branch = "master", service = "github" }

[lib]
name="viper_utils"
path="src/lib.rs"

[[bin]]
name="viper"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1.3.4"
lazy_static = "1.4.0"
indicatif = "0.14.0"
dialoguer = "0.5.0"
requests = "0.0.30"
json = "0.12.4"
dirs = "2.0.2"
